# aoc2022

./: .gitignore  README.md  pyproject.toml
