[tool.poetry]
name = "aoc2022"
version = "0.1.0"
description = ""
authors = ["tobias <tobias.mitterdorfer97@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"
black = "^22.10.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 90M
target-version = ['py39']
